objects/dbu_CrateTnC__mdt.object
<CustomObject>
    <fields>
        <fullName>dbu_AgreementCheckBox__c</fullName>
        <label>dbu_AgreementCheckBox</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dbu_AgreementLongDesc__c</fullName>
        <label>dbu_AgreementLongDesc</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dbu_AgreementShortDesc__c</fullName>
        <label>dbu_AgreementShortDesc</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>dbu_CrateTnC</label>
    <pluralLabel>dbu_CrateTnCs</pluralLabel>
</CustomObject>